[workspace]
members = ["node", "pallets/*", "runtime"]

[workspace.package]
repository = "https://github.com/phuquocdog/node"
[profile.release]
panic = "unwind"


[workspace.dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }

pallet-node-authorization = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-babe = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-staking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-staking-reward-curve = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-election-provider-multi-phase = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-offences = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-collective = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-treasury = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-bounties = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-authorship = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-im-online = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-child-bounties = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-bags-list = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-nomination-pools = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-election-provider-support= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-insecure-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-try-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-contracts = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-mmr = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-contracts-primitives = { default-features = false, package = "pallet-contracts-primitives", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-block-builder = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"}
sp-consensus-babe = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"}
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }


# Local Dependencies
pallet-chats = { default-features = false, path = "pallets/chats" }
runtime-utils = { path = "runtime/utils", default-features = false }
pallet-support = { default-features = false, path = "pallets/support" }
node-template = { path = "node" }
node-template-runtime = { path = "runtime" }
integration-tests = { path = "integration-tests" }
test-runtime = { path = "integration-tests/test-runtime" }

# node dependencies
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"  }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"  }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

sp-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-asset-tx-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
mmr-rpc = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-consensus-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-consensus-grandpa-rpc = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-network-sync = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-storage-monitor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-network-common = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-rpc-spec-v2 = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-alliance = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-assets = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-asset-rate = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-conviction-voting = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-core-fellowship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-democracy = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-fast-unstake = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-glutton = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-identity = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-indices = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-lottery = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-membership = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-message-queue = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-nfts = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-message-nfts = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-nfts-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-nis = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-nomination-pools-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-offences-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-preimage = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-proxy = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-ranked-collective = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-recovery = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-referenda = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-remark = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

pallet-salary = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-root-testing = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-session-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-society = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-staking-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-state-trie-migration = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-tips = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-transaction-storage = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-uniques = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-utility = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-whitelist = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-multisig = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-vesting = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

grandpa = {package = "sc-consensus-grandpa",  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"}
grandpa-primitives = {package = "sp-consensus-grandpa",  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"}

# These dependencies are used for runtime benchmarking
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
kitchensink-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
node-inspect = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
node-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
node-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sc-service-test = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
substrate-rpc-client = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.42', default-features = false }
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.42', default-features = false }
substrate-frame-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.42', default-features = false }

node-primitives = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.42', default-features = false }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.42' }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", branch = 'polkadot-v0.9.42' }
substrate-cli-test-utils = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.42' }
