[package]
authors = ['Substrate DevHub <https://github.com/phuquocdog>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://phuquoc.dog'
license = 'Unlicense'
name = 'pallet-currency'
readme = 'README.md'
repository = 'https://github.com/phuquocdog/node/'
version = '4.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies]
sp-core = { workspace = true , default-features = false }
sp-io = { workspace = true , default-features = false }
sp-runtime = {workspace = true , default-features = false }

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '2.2.0', default-features = false, features = ['derive'] }

frame-benchmarking = {workspace = true , default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = {workspace = true , default-features = false }
sp-std = { workspace = true , default-features = false }


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'sp-std/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
