[package]
name = "pallet-erc20"
version = "4.0.0-dev"
description = "FRAME pallet erc20."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.16"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true  }
frame-benchmarking = { default-features = false, workspace = true , optional = true }

[dev-dependencies]
sp-core = { default-features = false, workspace = true  }
sp-io = { default-features = false, workspace = true  }
sp-runtime = { default-features = false, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
